# cbag

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  build_util.sh  run_test.sh
include/cbag/common/: box_array.h  box_collection.h  box_t.h  layer_t.h  param_data.h  param_map.h  param_map_util.h  point_t.h  transformation.h  transformation_util.h  typedefs.h  vector.h
include/cbag/enum/: blockage_type.h  boundary_type.h  design_output.h  end_style.h  font_t.h  min_len_mode.h  path_style.h  round_mode.h  sig_type.h  space_type.h  supply_wrap.h  term_attr_type.h  (+3 more)
tests/: CMakeLists.txt  main.cpp
tests/cbag/common/: transformation.cpp
tests/cbag/gdsii/: gds_lookup.cpp  io.cpp  math.cpp
tests/cbag/layout/: cellview.cpp  convex.cpp  grid.cpp  path.cpp  tech.cpp  track_coloring.cpp  track_info.cpp  via.cpp
tests/cbag/netlist/: output.cpp
tests/cbag/oa/: oa_io.cpp  schematic.cpp
tests/cbag/schematic/: cellview.cpp
tests/cbag/spirit/: name.cpp
tests/cbag/util/: interval.cpp  io.cpp  sorted_map.cpp  sorted_vector.cpp  string.cpp
tests/data/: cds.lib
tests/data/OA/: cds.lib  cds_bad.lib
tests/data/OA/expect/netlist/: cv_array_inst_simple_0_0.cdl  cv_array_inst_simple_0_0.sv  cv_array_inst_simple_0_1.sv  cv_array_inst_w_bus_0_0.cdl  cv_array_inst_w_bus_0_0.sv  cv_array_inst_w_bus_0_1.sv  cv_bus_term_0_0.cdl  cv_bus_term_0_0.sv  cv_bus_term_0_1.sv  cv_bus_term_1_0.v  cv_cds_thru_0_0.cdl  cv_cds_thru_0_0.sv  cv_cds_thru_0_1.sv  cv_cds_thru_1_0.v  cv_inst_w_bus_0_0.cdl  cv_inst_w_bus_0_0.sv  cv_inst_w_bus_0_1.sv  cv_int_bus_net_0_0.cdl  cv_int_bus_net_0_0.sv  cv_int_bus_net_0_1.sv  cv_simple_0_0.cdl  cv_simple_0_0.sv  cv_simple_0_1.sv  pmos4_standard_0_0.sv  pmos4_standard_0_1.sv
tests/data/OA/expect/yaml/: cv_array_inst_simple.symbol.yaml  cv_array_inst_simple.yaml  cv_array_inst_w_bus.symbol.yaml  cv_array_inst_w_bus.yaml  cv_bus_term.symbol.yaml  cv_bus_term.yaml  cv_cds_thru.symbol.yaml  cv_cds_thru.yaml  cv_inst_w_bus.symbol.yaml  cv_inst_w_bus.yaml  cv_int_bus_net.symbol.yaml  cv_int_bus_net.yaml  cv_simple.symbol.yaml  cv_simple.yaml  pmos4_standard.symbol.yaml  pmos4_standard.yaml
tests/data/OA/test_netlist/: data.dm
tests/data/OA/test_netlist/cv_array_inst_simple/: data.dm
tests/data/OA/test_netlist/cv_array_inst_simple/schematic/: data.dm  sch.oa
tests/data/OA/test_netlist/cv_array_inst_w_bus/: data.dm
tests/data/OA/test_netlist/cv_array_inst_w_bus/schematic/: data.dm  sch.oa
tests/data/OA/test_netlist/cv_bus_term/schematic/: data.dm  sch.oa
tests/data/OA/test_netlist/cv_bus_term/symbol/: symbol.oa
tests/data/OA/test_netlist/cv_cds_thru/schematic/: data.dm  sch.oa
tests/data/OA/test_netlist/cv_cds_thru/symbol/: symbol.oa
tests/data/OA/test_netlist/cv_inst_w_bus/schematic/: data.dm  sch.oa
tests/data/OA/test_netlist/cv_int_bus_net/: data.dm
tests/data/OA/test_netlist/cv_int_bus_net/schematic/: data.dm  sch.oa
tests/data/OA/test_netlist/cv_int_bus_net/symbol/: symbol.oa
tests/data/OA/test_netlist/cv_simple/schematic/: data.dm  sch.oa
tests/data/OA/test_netlist/cv_simple/symbol/: symbol.oa
tests/data/OA/test_netlist/pmos4_standard/: data.dm
tests/data/OA/test_netlist/pmos4_standard/schematic/: data.dm  sch.oa
tests/data/OA/test_netlist/pmos4_standard/symbol/: symbol.oa
tests/data/cbag/common/transformation/: convert_array.yaml  convert_gds_array.yaml
tests/data/cbag/gdsii/io/: arr_inst.yaml  int.yaml  xform.yaml
tests/data/cbag/layout/convex/: get_cr_convex_hull.yaml  get_stairs.yaml  get_stairs_bbox.yaml
tests/data/cbag/layout/grid/: find_next_htr.yaml  get_via_extensions.yaml  get_wire_bounds.yaml  get_wire_width.yaml  track_coloring_at.yaml
tests/data/cbag/layout/path/: make_path.yaml  path_to_poly45.yaml
tests/data/cbag/layout/track_info/: coord_to_htr.yaml  transform_htr.yaml
tests/data/cbag/layout/via/: tech_info.yaml  via_cuts.yaml  via_info.yaml
tests/data/cbag/spirit/name/: cdba_bounds_to_str.yaml  cdba_get_bits.yaml  cdba_invalid.yaml  cdba_partition.yaml  cdba_repeat.yaml  cdba_to_verilog.yaml  cdba_valid.yaml
tests/data/cbag/util/interval/: get_next.yaml  get_prev.yaml  upper_bound_int.yaml
tests/data/cbag/util/string/: expand_env.yaml
tests/data/tech_config/: tech_params.yaml  tech_params_test.yaml
tests/data/test_gds/: gds.layermap  gds.objectmap
tests/data/test_layout/: grid.yaml  tech_params.yaml
tests/data/test_layout/grid/: coord_to_htr.yaml  find_next_htr.yaml
tests/data/test_netlist/cv_array_inst_simple/schematic/: data.dm  sch.oa
tests/data/test_netlist/cv_array_inst_simple/symbol/: symbol.oa
tests/data/test_netlist/cv_array_inst_w_bus/schematic/: data.dm  sch.oa
tests/data/test_netlist/cv_array_inst_w_bus/symbol/: symbol.oa
tests/data/test_netlist/cv_bus_term/schematic/: data.dm  sch.oa
tests/data/test_netlist/cv_inst_w_bus/schematic/: data.dm  sch.oa
tests/data/test_netlist/cv_inst_w_bus/symbol/: symbol.oa
tests/data/test_netlist/cv_simple/schematic/: data.dm  sch.oa
tests/data/test_netlist_netlist/: cv_array_inst_simple_0.cdl  cv_array_inst_simple_0.v  cv_array_inst_w_bus_0.cdl  cv_array_inst_w_bus_0.v  cv_array_inst_w_bus_1.v  cv_bus_term_0.cdl  cv_bus_term_0.v  cv_inst_w_bus_0.cdl  cv_inst_w_bus_0.v  cv_simple_0.cdl  cv_simple_0.v  nmos4_standard_0.cdl  pmos4_standard_0.v
tests/data/test_netlist_yaml/: cv_array_inst_simple.symbol.yaml  cv_array_inst_simple.yaml  cv_array_inst_w_bus.symbol.yaml  cv_array_inst_w_bus.yaml  cv_bus_term.symbol.yaml  cv_bus_term.yaml  cv_inst_w_bus.symbol.yaml  cv_inst_w_bus.yaml  cv_simple.symbol.yaml  cv_simple.yaml  nmos4_standard.symbol.yaml  nmos4_standard.yaml  pmos4_standard.symbol.yaml  pmos4_standard.yaml
tests/data/test_util/: intvs_expand_space.yaml  intvs_fix_drc.yaml  intvs_subtract.yaml  intvs_union.yaml
tests/include/cbag/tests/layout/: util.cpp  util.h
tests/include/cbag/tests/util/: io.h
tests/yaml-cpp/: tuple.cpp
util/: CMakeLists.txt  print_cv_props.cpp  print_gds.cpp  remove_gds_labels.cpp  write_cv_yaml.cpp  write_gds_rects.cpp  write_tech_info.cpp
(+224 files in other folders)
